# api/src/controllers/gamesController.ts
@@ -13,16 +13,28 @@ log.setLevel(config.get<LogLevelDesc>('LOG_LEVEL'))
 @Route('/games')
 export class gamesController extends Controller{
 
+    /**
+     * get all games registered
+     */
     @Get('/all')
     public async getGames (): Promise<Games> {
         return games.getAll()
     }
 
+    /**
+     * return infos about the Game Id requested
+     * @param id gameId
+     */
     @Get('/get/{id}')
     public async getGame (@Path() id: number): Promise<Game> {
         return games.get(id)
     }
 
+    /**
+     * Create a new game
+     * @param gameType which type of game do you want to create
+     * @returns gameId of the game created
+     */
     @Post('/new-game/{gameType}')
     public async createGame (@Path() gameType: GameTypes): Promise<number> {
         return games.createNewGame(gameType)
